--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx playwright install",
     "start": "node index.js",
     "dev": "nodemon server.js --ignore package.json",
     "test": "echo \"Error: no test specified\" && exit 1"
