--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx playwright install",
     "start": "node index.js",
     "dev": "nodemon server.js --ignore package.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2"
   },
   "devDependencies": {
